# sketch-generation

./: .gitignore  README.md  pyproject.toml  technical_assignment.ipynb
